# CC

./: .gitignore  .gitmodules  AGENTS.md  CC.code-workspace  CC_project_tasks.md  CHANGELOG  LICENSE  README.md  action_plan.md  hermes_phase6_tasks.md  hermes_phase7_tasks.md  hermes_tasks.md  nats.conf
.claude/: CLAUDE.md  (+1 more)
CC-Aggregator/: CC-Aggregator.toml  Cargo.toml  README.md
CC-Aggregator/src/: config.rs  main.rs  mqtt.rs  telemetry.rs  websocket.rs
CC-Src/CC-Client/: .qmake.stash  CC-Client.pro.user.18  CC-Client.pro.user.3.2-pre1  CC-Client.pro.user.febf25d  CC-Client.rc  CC-Client.vcxproj  CC-Client.vcxproj.filters  CMakeLists.txt  CMakePresets.json  CompareOperation.h  FileVersion.cpp  StationInfo.cpp  StationStateReceiver.cpp  aboutdialog.cpp  aboutdialog.h  batchcapturedialog.h  batchcaputrethread.cpp  batchcaputrethread.h  cc-client.qrc  detaildialog.cpp  editstationdialog.cpp  editstationdialog.h  executcounting.cpp  filebrowserdialog.h  filebrowserdialog.ui  filterBuildDialog.ui  filterbuilddialog.h  floatingmenu.h  main.cpp  monitor.cpp  processdialog.ui  qpagenumdialog.cpp  qpagenumdialog.h  recvfiledialog.h  screenimagedialog.ui  sendfiledialog.cpp  sendfiledialog.h  sendfiledialog.ui  sendfilethread.cpp  setintervaldialog.cpp  (+11 more)
CC-Src/CC-Client/Slice/: AppControlParameter.ice  IStationStateReceiver.ice  Network.ice  Version.ice
CC-Src/CC-Client/cpuplot/: CMakeLists.txt  counterpiemarker.h  plotpart.h
CC-Src/CC-Client/data/: data.txt
CC-Src/CC-Client/qwt-6.2.0/PaxHeaders.20782/: COPYING  classincludes  designer  doc  examples  playground  qwt.prf  qwt.pro  qwtbuild.pri  qwtconfig.pri  qwtfunctions.pri  src  tests
CC-Src/CC-Client/qwt-6.2.0/classincludes/PaxHeaders.20782/: QwtAxis  QwtEventPattern  QwtPlotRescaler  QwtSplineG1  QwtSymbol  classincludes.pro
CC-Src/CC-Client/qwt-6.2.0/designer/PaxHeaders.20782/: designer.pro  pixmaps  qwt_designer_plugin.cpp
CC-Src/CC-Client/qwt-6.2.0/doc/PaxHeaders.20782/: Doxyfile  DoxygenLayout.xml  changes.dox  doxyfilter.sh  html  install.dox  man  qwt.dox  qwtdoc.m4
CC-Src/CC-Client/qwt-6.2.0/examples/PaxHeaders.20782/: animation  barchart  bode  cpuplot  curvedemo  dials  distrowatch  examples.pri  examples.pro  itemeditor  legends  oscilloscope  polardemo  polarspectrogram  rasterview  refreshtest  scatterplot  simpleplot  sinusplot  splineeditor  stockchart  stylesheets  sysinfo  tvplot
CC-Src/CC-Client/qwt-6.2.0/playground/PaxHeaders.20782/: curvetracker  graphicscale  playground.pri  playground.pro  scaleengine  svgmap  symbols  vectorfield
CC-Src/CC-Client/qwt-6.2.0/src/: CMakeLists.txt
CC-Src/CC-Client/qwt-6.2.0/src/PaxHeaders.20782/: qwt.cpp  qwt.h  qwt_abstract_legend.cpp  qwt_abstract_legend.h  qwt_abstract_scale.cpp  qwt_abstract_scale.h  qwt_abstract_scale_draw.cpp  qwt_abstract_scale_draw.h  qwt_abstract_slider.cpp  qwt_abstract_slider.h  qwt_analog_clock.cpp  qwt_analog_clock.h  qwt_arrow_button.cpp  qwt_arrow_button.h  qwt_axis.h  qwt_axis_id.h  qwt_bezier.cpp  qwt_bezier.h  qwt_clipper.cpp  qwt_clipper.h  qwt_color_map.cpp  qwt_color_map.h  qwt_column_symbol.cpp  qwt_column_symbol.h  qwt_compass.cpp  qwt_compass.h  qwt_compass_rose.cpp  qwt_compass_rose.h  qwt_counter.cpp  qwt_counter.h  qwt_curve_fitter.cpp  qwt_curve_fitter.h  qwt_date.cpp  qwt_date.h  qwt_date_scale_draw.cpp  qwt_date_scale_draw.h  qwt_date_scale_engine.cpp  qwt_date_scale_engine.h  qwt_dial.cpp  qwt_dial.h  (+213 more)
CC-Src/CC-Client/qwt-6.2.0/tests/PaxHeaders.20782/: splineprof  splinetest  tests.pri
CC-Src/CC-Client/src/: CC-Client.pro  CC-Client.rc  CMakeLists.txt  CompareOperation.cpp  CompareOperation.h  Config.Server  DispatchEvent.h  FileVersion.h  FilterOperations.cpp  FilterOperations.h  Network.ice  NetworkInterface.cpp  NetworkInterface.h  ProgressBarDelegate.cpp  ProgressBarDelegate.h  StationInfo.cpp  StationInfo.h  StationList.cpp  StationList.h  StationStateReceiver.cpp  StationStateReceiver.h  Version.ice  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  autonetcfgdialog.cpp  autonetcfgdialog.h  autonetcfgdialog.ui  batchcapturedialog.cpp  batchcapturedialog.h  batchcapturedialog.ui  batchcaputrethread.cpp  batchcaputrethread.h  cc-client.qrc  cc-client_zh.ts  createvnidialog.cpp  createvnidialog.h  createvnidialog.ui  defaultappprocdialog.cpp  defaultappprocdialog.h  (+77 more)
CC-Src/CC-Client/src/Slice/: AppControlParameter.ice  CMakeLists.txt  IController.ice  IStationStateReceiver.ice
CC-Src/CC-Client/src/packetgraph/: CMakeLists.txt  captureprogressdlg.cpp  captureprogressdlg.h  captureprogressdlg.ui  fakecapturedata.cpp  fakecapturedata.h  packetanalyzewindow.cpp  packetanalyzewindow.h  packetanalyzewindow.ui  packetgraph.cpp  packetgraph.h
CC-Src/CC-Client/src/sysupgrade/: CMakeLists.txt  selectupgrademethoddlg.cpp  selectupgrademethoddlg.h  selectupgrademethoddlg.ui  sendupgradefiledialog.cpp  sendupgradefiledialog.h  sendupgradefiledialog.ui  sysupgradedialog.cpp  sysupgradedialog.h  sysupgradedialog.ui  sysupgradewizard.cpp  sysupgradewizard.h
CC-rClient/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
CC-rClient/src-tauri/capabilities/: default.json
CC-rClient/src-tauri/proto/: cc.proto
CC-rClient/src-tauri/src/: control.rs  grpc.rs  lib.rs  main.rs  models.rs  remote.rs  storage.rs  websocket.rs  websocket.rs.backup  wol.rs  ws_bridge.rs
CC-rStationService/: CC-rStationService.toml  Cargo.toml  README.md  build.rs
CC-rStationService/packaging/linux/: install.sh
CC-rStationService/packaging/linux/systemd/: cc-rstationservice-agent.service  cc-rstationservice.service
CC-rStationService/packaging/windows/: install.ps1  uninstall.ps1
CC-rStationService/proto/: agent.proto  cc.proto
CC-rStationService/scripts/: test-smoke.sh
CC-rStationService/src/: agent.rs  app.rs  batch.rs  batch_store.rs  config.rs  cpu_monitor.rs  disk_monitor.rs  groups.rs  groups_store.rs  grpc.rs  lib.rs  main.rs  memory_monitor.rs  mqtt.rs  network_counters.rs  network_monitor.rs  platform.rs  plugins.rs  process_monitor.rs  script_engine.rs  script_store.rs  scripts.rs  state.rs  tags.rs  tags_store.rs
(+3545 files in other folders)
