[package]
name = "cc-aggregator"
version = "0.1.0"
edition = "2021"
description = "CC IoT Aggregator - Message broker for CC Station Service"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# MQTT client
rumqttc = "0.24"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tracing for logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WebSocket
tokio-tungstenite = "0.26"

# Futures utilities
futures-util = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID for station IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# TOML configuration
toml = "0.8"

# Async channels
async-channel = "2.3"

# Async mutex
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"

[[bin]]
name = "cc-aggregator"
path = "src/main.rs"
