[package]
name = "cc-rstationservice"
version = "0.1.0"
edition = "2024"
authors = ["OpenAI Codex"]
default-run = "cc-rstationservice"

[lib]
name = "cc_rstationservice"

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.2"

[dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
futures-util = "0.3.31"
hostname = "0.4.1"
netstat2 = "0.11.2"
pnet_datalink = "0.35.0"
prost = "0.14.1"
screenshots = "0.8.10"
serde = { version = "1.0.228", features = ["derive"] }
shlex = "1.3.0"
sysinfo = "0.38.4"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1.17"
toml = "0.9.8"
tonic = { version = "0.14.2", features = ["transport"] }
tonic-prost = "0.14.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.2", features = ["fs", "process", "signal"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.8.0"
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock"] }
