[package]
name = "cc-rclient"
version = "0.1.0"
description = "Rust/Tauri migration of CC-Client"
authors = ["OpenAI Codex"]
license = ""
repository = ""
edition = "2024"

[lib]
name = "cc_rclient_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tauri-build = { version = "2.2.0", features = [] }
tonic-prost-build = "0.14.2"

[dependencies]
base64 = "0.22.1"
dirs = "6.0.0"
prost = "0.14.1"
quick-xml = { version = "0.38.3", features = ["escape-html"] }
roxmltree = "0.20.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.9.1", features = [] }
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time", "net"] }
tokio-stream = "0.1.18"
tonic = { version = "0.14.2", features = ["transport"] }
tonic-prost = "0.14.2"
tracing = "0.1"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# WebSocket and MQTT for CC-Aggregator integration
tokio-tungstenite = "0.26"
futures-util = "0.3"
rumqttc = "0.24"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
